1. new version database 2.new interface with main app, show info about extension collect 3.try to reopen window

--- a/Sex8BlockExtension/Sex8BlockExtension/Base.lproj/Main.storyboard
+++ b/Sex8BlockExtension/Sex8BlockExtension/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13122.19" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="13122.19" systemVersion="16F73" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13122.19"/>
@@ -683,12 +683,11 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Sex8BlockExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
+                        <rect key="frame" x="0.0" y="0.0" width="627" height="341"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Zh-hN-h03">
-                                <rect key="frame" x="271" y="13" width="67" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1Zh-hN-h03">
+                                <rect key="frame" x="330" y="13" width="67" height="32"/>
                                 <buttonCell key="cell" type="push" title="提取" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Reu-8F-DlM">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -697,19 +696,9 @@
                                     <action selector="extract:" target="XfG-lQ-9wD" id="ytN-9z-XTz"/>
                                 </connections>
                             </button>
-                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pln-Le-zIs">
-                                <rect key="frame" x="57" y="72" width="367" height="178"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" sendsActionOnEndEditing="YES" title="Multiline Label" id="9AE-BS-AWG">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kkJ-ji-QBM">
-                                <rect key="frame" x="156" y="13" width="67" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="push" title="存储" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="lCH-V2-1Sp">
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kkJ-ji-QBM">
+                                <rect key="frame" x="230" y="13" width="67" height="32"/>
+                                <buttonCell key="cell" type="push" title="清除" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="lCH-V2-1Sp">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
                                 </buttonCell>
@@ -717,17 +706,144 @@
                                     <action selector="save:" target="XfG-lQ-9wD" id="Gee-yb-Nxa"/>
                                 </connections>
                             </button>
+                            <containerView translatesAutoresizingMaskIntoConstraints="NO" id="s2B-bw-6BZ">
+                                <rect key="frame" x="20" y="71" width="587" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="250" id="rZD-Lb-Djk"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="1up-XG-rRf" kind="embed" id="rTj-nd-y7n"/>
+                                </connections>
+                            </containerView>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4F4-YJ-DqA">
+                                <rect key="frame" x="432" y="13" width="67" height="32"/>
+                                <buttonCell key="cell" type="push" title="删除" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kjf-o0-3Zk">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" size="13" name=".PingFangSC-Regular"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="deleteAction:" target="XfG-lQ-9wD" id="z3o-8n-ICQ"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="NDp-KK-32D">
+                                <rect key="frame" x="14" y="13" width="94" height="32"/>
+                                <buttonCell key="cell" type="push" title="查看图片" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="1k2-Mo-yPJ">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" size="13" name=".PingFangSC-Regular"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="showPicture:" target="XfG-lQ-9wD" id="0Km-MG-peX"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ISF-Dd-ZBH">
+                                <rect key="frame" x="519" y="13" width="94" height="32"/>
+                                <buttonCell key="cell" type="push" title="查看地址" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cG8-f7-PIm">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" size="13" name=".PingFangSC-Regular"/>
+                                </buttonCell>
+                            </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="kkJ-ji-QBM" secondAttribute="bottom" constant="20" id="3z3-aY-HuB"/>
+                            <constraint firstItem="kkJ-ji-QBM" firstAttribute="top" secondItem="s2B-bw-6BZ" secondAttribute="bottom" constant="30" id="DJx-fB-FPO"/>
+                            <constraint firstAttribute="trailing" secondItem="ISF-Dd-ZBH" secondAttribute="trailing" constant="20" id="GO3-JJ-cGY"/>
+                            <constraint firstItem="kkJ-ji-QBM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NDp-KK-32D" secondAttribute="trailing" constant="134" id="Hm8-Zs-04J"/>
+                            <constraint firstItem="ISF-Dd-ZBH" firstAttribute="centerY" secondItem="4F4-YJ-DqA" secondAttribute="centerY" id="Hqw-oR-klb"/>
+                            <constraint firstItem="4F4-YJ-DqA" firstAttribute="centerY" secondItem="1Zh-hN-h03" secondAttribute="centerY" id="NBW-HD-0rQ"/>
+                            <constraint firstItem="1Zh-hN-h03" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" constant="50" id="Owz-mQ-MZZ"/>
+                            <constraint firstItem="4F4-YJ-DqA" firstAttribute="leading" secondItem="1Zh-hN-h03" secondAttribute="trailing" constant="47" id="Xz0-dh-x45"/>
+                            <constraint firstItem="NDp-KK-32D" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="YS1-KS-AhL"/>
+                            <constraint firstItem="ISF-Dd-ZBH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4F4-YJ-DqA" secondAttribute="trailing" constant="32" id="fna-8s-9GC"/>
+                            <constraint firstAttribute="bottom" secondItem="1Zh-hN-h03" secondAttribute="bottom" constant="20" id="lEe-z7-xfA"/>
+                            <constraint firstItem="NDp-KK-32D" firstAttribute="centerY" secondItem="kkJ-ji-QBM" secondAttribute="centerY" id="mcQ-OU-R9A"/>
+                            <constraint firstAttribute="trailing" secondItem="s2B-bw-6BZ" secondAttribute="trailing" constant="20" id="tcU-x6-wiv"/>
+                            <constraint firstItem="s2B-bw-6BZ" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="tlc-FN-Ryb"/>
+                            <constraint firstItem="s2B-bw-6BZ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="tmP-ky-84a"/>
+                            <constraint firstItem="kkJ-ji-QBM" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" constant="-50" id="w32-Oe-uwm"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="address" destination="ISF-Dd-ZBH" id="KfJ-N0-cgT"/>
                         <outlet property="extract" destination="1Zh-hN-h03" id="uXZ-2o-I8C"/>
-                        <outlet property="label" destination="Pln-Le-zIs" id="IAL-uU-m74"/>
+                        <outlet property="images" destination="NDp-KK-32D" id="7we-PN-VAk"/>
                         <outlet property="save" destination="kkJ-ji-QBM" id="774-Oe-VlN"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="12.5" y="690.5"/>
+        </scene>
+        <!--List Table View Controller-->
+        <scene sceneID="XjH-d7-Gqo">
+            <objects>
+                <viewController id="1up-XG-rRf" customClass="ListTableViewController" customModule="Sex8BlockExtension" sceneMemberID="viewController">
+                    <view key="view" id="gBf-Yn-n3a">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <scrollView wantsLayer="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rku-z1-aE2">
+                                <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                                <clipView key="contentView" id="CrE-w1-Ttf">
+                                    <rect key="frame" x="1" y="0.0" width="448" height="299"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" headerView="TSf-vY-OYd" id="IHa-8g-AAF">
+                                            <rect key="frame" x="0.0" y="0.0" width="468" height="276"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <size key="intercellSpacing" width="3" height="2"/>
+                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                            <tableColumns>
+                                                <tableColumn identifier="" width="465" minWidth="10" maxWidth="3.4028234663852886e+38" id="B0m-Ww-ccR">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
+                                                        <font key="font" metaFont="smallSystem"/>
+                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    </tableHeaderCell>
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="rUX-aW-YEU">
+                                                        <font key="font" metaFont="system"/>
+                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    </textFieldCell>
+                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                </tableColumn>
+                                            </tableColumns>
+                                            <connections>
+                                                <outlet property="dataSource" destination="1up-XG-rRf" id="wSH-GX-OW0"/>
+                                                <outlet property="delegate" destination="1up-XG-rRf" id="xfZ-fU-Zix"/>
+                                            </connections>
+                                        </tableView>
+                                    </subviews>
+                                </clipView>
+                                <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="na5-et-HRC">
+                                    <rect key="frame" x="1" y="283" width="448" height="16"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="Tps-XM-Lpt">
+                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <tableHeaderView key="headerView" id="TSf-vY-OYd">
+                                    <rect key="frame" x="0.0" y="0.0" width="468" height="23"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableHeaderView>
+                            </scrollView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="rku-z1-aE2" secondAttribute="bottom" id="0u3-AN-DlS"/>
+                            <constraint firstItem="rku-z1-aE2" firstAttribute="leading" secondItem="gBf-Yn-n3a" secondAttribute="leading" id="7B2-7l-5vo"/>
+                            <constraint firstAttribute="trailing" secondItem="rku-z1-aE2" secondAttribute="trailing" id="J6W-fA-gJs"/>
+                            <constraint firstItem="rku-z1-aE2" firstAttribute="top" secondItem="gBf-Yn-n3a" secondAttribute="top" id="b8S-f3-Aoe"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableview" destination="IHa-8g-AAF" id="x9S-z0-3iD"/>
+                    </connections>
+                </viewController>
+                <customObject id="Vav-il-FMA" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <userDefaultsController representsSharedInstance="YES" id="6pP-rF-Uk7"/>
+            </objects>
+            <point key="canvasLocation" x="669" y="690"/>
         </scene>
     </scenes>
 </document>
