1. make new picture preview window 2. optimism image reload performence

--- a/Sex8BlockExtension/Sex8BlockExtension/Base.lproj/Main.storyboard
+++ b/Sex8BlockExtension/Sex8BlockExtension/Base.lproj/Main.storyboard
@@ -683,11 +683,11 @@
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Sex8BlockExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="627" height="341"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1037" height="629"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="1Zh-hN-h03">
-                                <rect key="frame" x="330" y="13" width="67" height="32"/>
+                                <rect key="frame" x="535" y="13" width="67" height="32"/>
                                 <buttonCell key="cell" type="push" title="提取" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Reu-8F-DlM">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -697,7 +697,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kkJ-ji-QBM">
-                                <rect key="frame" x="230" y="13" width="67" height="32"/>
+                                <rect key="frame" x="435" y="13" width="67" height="32"/>
                                 <buttonCell key="cell" type="push" title="清除" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="lCH-V2-1Sp">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -707,8 +707,9 @@
                                 </connections>
                             </button>
                             <containerView translatesAutoresizingMaskIntoConstraints="NO" id="s2B-bw-6BZ">
-                                <rect key="frame" x="20" y="71" width="587" height="250"/>
+                                <rect key="frame" x="20" y="71" width="300" height="538"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="0dN-p6-Jeo"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="250" id="rZD-Lb-Djk"/>
                                 </constraints>
                                 <connections>
@@ -716,7 +717,7 @@
                                 </connections>
                             </containerView>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4F4-YJ-DqA">
-                                <rect key="frame" x="432" y="13" width="67" height="32"/>
+                                <rect key="frame" x="637" y="13" width="67" height="32"/>
                                 <buttonCell key="cell" type="push" title="删除" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kjf-o0-3Zk">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -736,19 +737,27 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ISF-Dd-ZBH">
-                                <rect key="frame" x="519" y="13" width="94" height="32"/>
+                                <rect key="frame" x="929" y="13" width="94" height="32"/>
                                 <buttonCell key="cell" type="push" title="查看地址" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cG8-f7-PIm">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" size="13" name=".PingFangSC-Regular"/>
                                 </buttonCell>
                             </button>
+                            <containerView translatesAutoresizingMaskIntoConstraints="NO" id="ibN-iT-dRO">
+                                <rect key="frame" x="338" y="71" width="679" height="538"/>
+                                <connections>
+                                    <segue destination="cff-Nq-Ge9" kind="embed" id="cWI-QX-PEh"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="ibN-iT-dRO" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="0Yn-82-AmG"/>
                             <constraint firstAttribute="bottom" secondItem="kkJ-ji-QBM" secondAttribute="bottom" constant="20" id="3z3-aY-HuB"/>
                             <constraint firstItem="kkJ-ji-QBM" firstAttribute="top" secondItem="s2B-bw-6BZ" secondAttribute="bottom" constant="30" id="DJx-fB-FPO"/>
                             <constraint firstAttribute="trailing" secondItem="ISF-Dd-ZBH" secondAttribute="trailing" constant="20" id="GO3-JJ-cGY"/>
                             <constraint firstItem="kkJ-ji-QBM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NDp-KK-32D" secondAttribute="trailing" constant="134" id="Hm8-Zs-04J"/>
                             <constraint firstItem="ISF-Dd-ZBH" firstAttribute="centerY" secondItem="4F4-YJ-DqA" secondAttribute="centerY" id="Hqw-oR-klb"/>
+                            <constraint firstItem="ibN-iT-dRO" firstAttribute="height" secondItem="s2B-bw-6BZ" secondAttribute="height" id="KKi-4C-d0d"/>
                             <constraint firstItem="4F4-YJ-DqA" firstAttribute="centerY" secondItem="1Zh-hN-h03" secondAttribute="centerY" id="NBW-HD-0rQ"/>
                             <constraint firstItem="1Zh-hN-h03" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" constant="50" id="Owz-mQ-MZZ"/>
                             <constraint firstItem="4F4-YJ-DqA" firstAttribute="leading" secondItem="1Zh-hN-h03" secondAttribute="trailing" constant="47" id="Xz0-dh-x45"/>
@@ -756,14 +765,16 @@
                             <constraint firstItem="ISF-Dd-ZBH" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="4F4-YJ-DqA" secondAttribute="trailing" constant="32" id="fna-8s-9GC"/>
                             <constraint firstAttribute="bottom" secondItem="1Zh-hN-h03" secondAttribute="bottom" constant="20" id="lEe-z7-xfA"/>
                             <constraint firstItem="NDp-KK-32D" firstAttribute="centerY" secondItem="kkJ-ji-QBM" secondAttribute="centerY" id="mcQ-OU-R9A"/>
-                            <constraint firstAttribute="trailing" secondItem="s2B-bw-6BZ" secondAttribute="trailing" constant="20" id="tcU-x6-wiv"/>
                             <constraint firstItem="s2B-bw-6BZ" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="tlc-FN-Ryb"/>
                             <constraint firstItem="s2B-bw-6BZ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="tmP-ky-84a"/>
+                            <constraint firstAttribute="trailing" secondItem="ibN-iT-dRO" secondAttribute="trailing" constant="20" id="tqo-x4-ZBX"/>
                             <constraint firstItem="kkJ-ji-QBM" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" constant="-50" id="w32-Oe-uwm"/>
+                            <constraint firstItem="ibN-iT-dRO" firstAttribute="leading" secondItem="s2B-bw-6BZ" secondAttribute="trailing" constant="18" id="zUi-wg-Q7v"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="address" destination="ISF-Dd-ZBH" id="KfJ-N0-cgT"/>
+                        <outlet property="collectionView" destination="ibN-iT-dRO" id="eVw-z3-6hX"/>
                         <outlet property="extract" destination="1Zh-hN-h03" id="uXZ-2o-I8C"/>
                         <outlet property="images" destination="NDp-KK-32D" id="7we-PN-VAk"/>
                         <outlet property="save" destination="kkJ-ji-QBM" id="774-Oe-VlN"/>
@@ -771,7 +782,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="76" y="776"/>
+            <point key="canvasLocation" x="-719.5" y="877.5"/>
         </scene>
         <!--Pics Collection View Controller-->
         <scene sceneID="hB5-wB-rNr">
@@ -825,12 +836,12 @@
                 </viewController>
                 <customObject id="lTg-gY-Qgb" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="71" y="1257"/>
+            <point key="canvasLocation" x="-255" y="1466"/>
         </scene>
         <!--List Table View Controller-->
         <scene sceneID="XjH-d7-Gqo">
             <objects>
-                <viewController id="1up-XG-rRf" customClass="ListTableViewController" customModule="Sex8BlockExtension" sceneMemberID="viewController">
+                <viewController identifier="ListTableViewController" storyboardIdentifier="ListTableViewController" id="1up-XG-rRf" customClass="ListTableViewController" customModule="Sex8BlockExtension" sceneMemberID="viewController">
                     <view key="view" id="gBf-Yn-n3a">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -898,6 +909,18 @@
                 <userDefaultsController representsSharedInstance="YES" id="6pP-rF-Uk7"/>
             </objects>
             <point key="canvasLocation" x="782" y="775"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Ghs-zD-zLa">
+            <objects>
+                <viewController id="fiw-5U-ehy" sceneMemberID="viewController">
+                    <view key="view" id="Z5W-aJ-Iyf">
+                        <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </view>
+                </viewController>
+                <customObject id="ydk-dd-1GO" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
 </document>
